--- a/index.html
+++ b/index.html
@@ -1,1 +1,211 @@
-Hello World
+<html>
+<head>
+	<title>Bombarda- Resume</title>
+</head>
+<body>
+	<h1>LHOREXCEL D. BOMBARDA</h1>
+	<p><strong>Address:</strong> Blk. 13 Lot 25 Yakal St. Villa Pozorrubio, Pangasinan<br>
+		<strong>Phone Number:</strong> 0995 196 4087<br>
+		<strong>Email:</strong> lhorexcelbombarda@gmail.com<br>
+		<strong>Portfolio Webiste:</strong> <a href="https://lhorexcelbombarda1.wixsite.com/exceldeproduction">WEBISTE | Lhorexcel Bombarda</a>
+	</p><hr>
+	<h3>PERSONAL INFORMATION<br></h3>
+	<p><strong>Date of Birth: </strong> November 22, 2002 <br>
+		<strong>Place of Birth: </strong> Urdaneta, Pangasinan <br>
+		<strong>Age: </strong> 19 years old <br>
+		<strong>Gender: </strong> Male <br>
+		<strong>Civil Status: </strong> Single <br>
+		<strong>Citizenships: </strong> Filipino <br>
+		<strong>Father’s Name: </strong> Marvin Dagatan Bombarda <br>
+		<strong>Mother’s Maiden Name: </strong> Sherryl Ann Cadavona Dela Cruz <br>
+		<strong>Height: </strong> 5’11” <br>
+		<strong>Weight: </strong> 67 kgs <br>
+		<strong>Language/Dialect: </strong> English, Filipino, Ilokano <br>
+	</p><hr>
+
+	<h3>EDUCATIONAL ATTAINMENT</h3>
+	<table>
+		<tr><td><strong>Undergraduate</strong></td><td><strong>: Bachelor of Science in Information Technology -<em>Major in Web Technology</em> </strong><br></td></tr>
+		<tr><td></td>
+			<td>
+			<ul>
+				<li>University of the Cordilleras</li>
+				<li>Governor Pack Road, Baguio City</li>
+				<li>Expected date of graduation: August 2024</li>
+			</ul></td></tr>
+
+		<tr><td><strong>Senior High School</strong></td><td><strong>: Technical-Vocational Track – Information and Communications Technology Strand -<em>Major in Animation</em></strong><br></td></tr>
+		<tr><td></td>
+			<td>
+			<ul>
+				<li>University of the Cordilleras</li>
+				<li>Governor Pack Road, Baguio City</li>
+				<li>July 2021</li>
+				<li>With High Honors</li>
+			</ul></td></tr>
+
+		<tr><td><strong>Junior High School</strong></td><td><strong>: Special Program in the Arts -<em>Major in Media Arts</em></strong><br></td></tr>
+		<tr><td></td>
+			<td>
+			<ul>
+				<li>Juan G. Macaraeg National High School</li>
+				<li>Brgy. Canarvacanan Binalonan, Pangasinan</li>
+				<li>March 2019</li>
+				<li>With Honors/ Artist of the Year</li>
+			</ul></td></tr>
+
+		<tr><td><strong>Primary</strong></td><td><strong>: Pozorrubio Central School <br></td></tr>
+		<tr><td></td>
+			<td>
+			<ul>
+				<li>Cabellero St. Pozorrubio, Pangasinan</li>
+				<li>April 2015</li>
+				<li>With Honors/ Proficient in Computer</li>
+			</ul></td></tr>
+	</table><hr>
+
+	<h3>SKILLS AND QUALIFICATIONS</h3>
+		<ul>
+				<li>Proficient with multimedia software: Adobe Photoshop, Sony Vegas, Adobe Premiere</li>
+				<li>Skilled in Photography, Videography, and Editing</li>
+				<li>Knowledgeable in programming language: Java, SQL</li>
+				<li>Strong interest in art and graphic design</li>
+				<li>Competent and reliable professional, committed to top quality work</li>
+				<li>Resourceful in solving problems and maximizing resources</li>
+				<li>Flexible individual and team player who builds a positive relationship with others with humor, helpfulness, and cultural sensitivity</li>
+		</ul><hr>
+
+	<h3>SEMINARS and TRAININGS ATTENDED</h3>
+		<ul>
+			<table>
+				<tr><li>A Webinar on Using OBS and DroidCam to Enhance ODL Experience</li>
+					November 13, 2021
+					<br>University of the Cordilleras
+				<td>
+				<tr><li>Huawei Training Participation – The Future of Mobile App Industry
+				</li>
+					September 24, 2021
+					<br>Huawei Developers
+				<td>
+
+				<tr><li>FDCP Film School: Basic Workshops on Filmmaking for Unsung Sariling Bayani(Sound Design, Musical Score)
+				</li>
+					June 6, 2021
+					<br>Film Development Council of the Philippines
+				<td>
+
+				<tr><li>FDCP Film School: Basic Workshops on Filmmaking for Unsung Sariling Bayani(Post-production Supervision, Editing)
+				</li>
+					June 5, 2021
+					<br>Film Development Council of the Philippines
+				<td>
+
+				<tr><li>FDCP Film School: Basic Workshops on Filmmaking for Unsung Sariling Bayani(Directing, Action Design)
+				</li>
+					May 30, 2021
+					<br>Film Development Council of the Philippines
+				<td>
+
+				<tr><li>FDCP Film School: Basic Workshops on Filmmaking for Unsung Sariling Bayani(Cinematography)</li>
+					May 29, 2021
+					<br>Film Development Council of the Philippines
+				<td>
+
+				<tr><li>FDCP Film School: Basic Workshops on Filmmaking for Unsung Sariling Bayani (Production Design, Scriptwriting)
+				</li>
+					May 23, 2021
+					<br>Film Development Council of the Philippines
+				<td>
+
+				<tr><li>FDCP Film School: Basic Workshops on Filmmaking for Unsung Sariling Bayani(Production Management, Creative Producing)
+				</li>
+					May 22, 2021
+					<br>Film Development Council of the Philippines
+				<td>
+
+				<tr><li>Pista ng Sining 2021 PEDUSA (Pelikula.Dula. Sining)</li>
+					April 4- 6 May 2020
+					<br>Tanghalang Banyuhay Inc.
+				<td>
+
+				<tr><li>UC DevEx Hackathon 2020</li>
+					November 18-29, 2020
+					<br>University of the Cordilleras
+				<td>
+			</table>
+		</ul><hr>
+
+	<h3>AWARDS and CERTIFICATES</h3>
+		<ul>
+			<table>
+				<tr><li>1st Place UC Green Is In 2021-2022 Video Making Competition</li>
+					April 11, 2022
+					<br>University of the Cordilleras
+				<td>
+				<tr><li>Best Short Film Runner Up - Pista ng Sining 2021 PEDUSA (Pelikula.Dula. Sining)</li>
+					With High Honors- Pista ng Sining 2021 PEDUSA (Pelikula.Dula. Sining)
+					<br>Best in Editing- Pista ng Sining 2021 PEDUSA (Pelikula.Dula. Sining)
+					<br>Best in Cinematography- Pista ng Sining 2021 PEDUSA (Pelikula.Dula. Sining)
+					<br>Best in Sound Scoring - Pista ng Sining 2021 PEDUSA (Pelikula.Dula. Sining)
+					<br>Best in Production Design - Pista ng Sining 2021 PEDUSA (Pelikula.Dula. Sining)
+					<br>People’s Choice Award- Pista ng Sining 2021 PEDUSA (Pelikula.Dula. Sining)
+					<br>May 30, 2021
+					<br>Tanghalang Banyuhay Inc., Valuenzuela, Metro Manila
+				<td>
+
+				<tr><li>Finalist – 5th Placer Sineliksik (2018 Regional Festival of Talents)
+				</li>
+					December 18, 2018
+					<br>Dagupan City National High School
+				<td>
+
+				<tr><li>Finalist – 1st Placer Sineliksik (2018 Divison Festival of Talents)
+				</li>
+					November 17, 2018
+					<br>Tayug National High School
+				<td>
+
+				<tr><li>1st Place Photography (Division Arts and Crafts Contest, “Likha 2019)</li>
+					January 29, 2019
+					<br>Alcala Public Auditorium, Pangasinan
+				<td>
+
+				<tr><li>2nd Place Photo Editing (Division Arts and Crafts Contest, “Likha 2019)</li>
+					January 29, 2019
+					<br>Alcala Public Auditorium, Pangasinan
+				<td>
+
+				<tr><li>1st Place Photography Contest (Division Arts and Crafts Contest, “Likha 2018)</li>
+					April 25, 2018
+					<br>Binalonan, Pangasinan
+				<td>
+			</table>
+		</ul><hr>
+
+	<h3>LEADERSHIP and MEMBERSHIP</h3>
+		<ul>
+			<table>
+				<tr><li>Binalonan Arts and Culture Society</li>
+					Binalonan, Pangasinan
+					<br>January 2021 - Present
+				<td>
+				<tr><li>Center for Productive Production</li>
+					University of the Cordilleras, Baguio City
+					<br>August 2020 – Present
+				<td>
+
+				<tr><li>Performing Arts Club</li>
+					Juan G. Macaraeg National High School
+					<br>March 2018 – March 2019
+				<td>
+
+				<tr><li>Millennium Achievers Science Club</li>
+					Juan G. Macaraeg National High School
+					<br>March 2017 – March 2019
+				<td>
+			</table>
+		</ul><hr>
+
+
+</body>
+</html>
